[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5.1", features = ["fs"] }
tower = { version = "0.4", features = ["full"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
